<resources>
    <string name="app_name">MungNyang</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adopt_first">1. 입양 전 확인</string>
    <string name="adopt_first_content1">서울동물복지지원센터 홈페이지와 멍_냥에서 입양대기 동물들을 확인합니다.</string>
    <string name="adopt_first_content2">입양대기동물의 다양한 사진과 영상은 서울동물복지지원센터 유튜브에서도 보실 수 있어요.</string>

    <string name="adopt_second">2. 입양 전 교육</string>
    <string name="adopt_second_content1">입양을 희망하시는 분은 서울시 평생학습포털의 "반려동물 입양교육"을 이수해주세요.</string>

    <string name="adopt_third">3. 입양상담예약</string>
    <string name="adopt_third_content1">방문 전 유선으로 일정예약을 해주시고 센터로 방문해주세요.</string>

    <string name="adopt_fourth">4. 입양 진행</string>
    <string name="adopt_fourth_content1">입양은 1~2회 입양상담 및 개체만남을 통해 진행됩니다.</string>
    <string name="adopt_fourth_content2">(입양 후 파양은 불가합니다. 만남을 통해 신중하게 결정해주세요.</string>

    <string name="adopt_fifth">5. 입양 후기 공유</string>
    <string name="adopt_fifth_content1">보호자님과 입양된 반려견, 반려묘의 행복한 일상을 네이버카페와 멍_냥에서 주기적으로 올려주세요.</string>
    <string name="adopt_fifth_content2">입양 대기 중인 아이들의 입양과 인식 개선에 많은 도움이 됩니다.</string>

</resources>